<resources>
    <string name="app_name">eReader</string>
    <string name="nav_header_title">eReader</string>

    <string name="menu_account">Account</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_bookstore">Bookstore</string>
    <string name="menu_collection">Collection</string>
    <string name="title_item_detail">Item Detail</string>

    <!-- Strings related to login and registration -->
    <string name="prompt_email">Email</string>
    <string name="prompt_full_name">Full name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repeat_password">Repeat password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome: "</string>
    <string name="registration">"Registered: "</string>
    <string name="invalid_name">Not a valid name</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_password_match">Passwords must match</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registration_failed">"Registration failed"</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_sign_up_here">Sign up</string>
    <string name="new_collection">New collection</string>
    <string name="collections">Collections</string>
    <string name="all_books">All books</string>
    <string name="favourites">Favourites</string>
    <string name="to_read">To read</string>
    <string name="have_read">Have read</string>
    <string name="enter_collection_name_hint">Enter collection name...</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="account_user_id">USER ID: %1$s</string>
    <string name="account_username">USERNAME: %1$s</string>
    <string name="account_name">NAME: %1$s</string>

    <string name="reading_screen">
        Lorem ipsum dolor sit amet, sumo voluptatum conclusionemque vel at, minim conceptam cu nec. Ex iisque consulatu vix, mea eirmod timeam an, eius intellegat has at. Te debitis convenire delicatissimi vis, et fugit assueverit duo. Libris legendos adipiscing no vis. Has ea eligendi torquatos, vel vide doming ex. Sea te stet fabulas appellantur.
        An munere appareat sadipscing quo, sed partiendo appellantur ex. Ad duo dico insolens, mei no dicant munere, alia debet ubique ut usu. Voluptua appetere argumentum ius ne. Tota fugit dicit duo ne, docendi alienum constituto an usu. Id sed idque simul utamur, an duo falli partiendo iracundia.
        Ne quodsi audire quo, ex est rebum mucius. Nulla nostrud patrioque eam ut, et per quodsi adipisci expetenda. Omnesque similique mel ea, duo in paulo expetenda, ne sea commune repudiandae. Nominati indoctum id sit, an elit eripuit has, ei mazim corrumpit expetendis per. In mel eros postulant, vivendum tincidunt an duo.
        Inani ubique perpetua eu sed, eu nec sint perpetua. Usu tollit fierent facilisis et. Zril labore mel ne, quidam philosophia et his. Cu erant consul graeco nec, at ius invidunt vivendum.
        Cu prompta bonorum molestie has, eu vix euismod honestatis quaerendum. Detracto necessitatibus et eos. Vis ea ludus insolens platonem, eros sonet vel at. Cum an partem ubique luptatum. Nisl assueverit qui eu. Sea aperiri moderatius scribentur ad, vim minimum principes ex.
    </string>
    <string name="action_content">Content</string>
    <string name="pref_sync">pref_sync</string>
    <string name="pref_sync_summ">Allow app to sync data automatically, when wifi is avalible</string>
    <string name="pref_sync_title">Allow Sync</string>
    <string name="notifications">Notifications</string>
    <string name="notify_on_key">notify</string>
    <string name="notify_on_summ">Send you notifications on app that you have created after sync</string>
    <string name="notif_on_my_app">On my app</string>
    <string name="notif_on_sync_key">notif_on_sync</string>
    <string name="notif_on_sync_summ">Send you notifications about sync</string>
    <string name="notif_on_sync_title">Sync notifications</string>
    <string name="offline_text">Offline</string>
    <string name="font">Font</string>
    <string name="brightness">Brightness</string>
    <string name="leave_offline">Leave offline mode</string>
</resources>
