<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_all_books">

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.pma.ereader.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.pma.ereader.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_bookstore"
        android:name="com.example.pma.ereader.ui.bookstore.BookstoreFragment"
        android:label="@string/menu_bookstore"
        tools:layout="@layout/fragment_bookstore" />

    <fragment
        android:id="@+id/nav_favourites"
        android:name="com.example.pma.ereader.ui.favorites.FavoritesFragment"
        android:label="@string/favourites"
        tools:layout="@layout/fragment_collection" />

    <fragment
        android:id="@+id/nav_to_read"
        android:name="com.example.pma.ereader.ui.toread.ToReadFragment"
        android:label="@string/to_read"
        tools:layout="@layout/fragment_collection" />

    <fragment
        android:id="@+id/nav_have_read"
        android:name="com.example.pma.ereader.ui.haveread.HaveReadFragment"
        android:label="@string/have_read"
        tools:layout="@layout/fragment_collection" />

    <fragment
        android:id="@+id/nav_all_books"
        android:name="com.example.pma.ereader.ui.collection.CollectionFragment"
        android:label="@string/menu_collection"
        tools:layout="@layout/fragment_collection" />

    <dialog
        android:id="@+id/nav_new_collection"
        android:name="com.example.pma.ereader.ui.NewCollectionDialog"
        tools:layout="@layout/dialog_new_collection"/>

</navigation>